<resources>
    <string name="app_name">CC Demo</string>
</resources>
